spring boot and maven dependencies updated